# InsaAutomationCorp

./: .commitlintrc.json  .gitignore  .gitleaksignore  .mcp.json  .releaserc.json  AGENT_INTELLIGENCE_COMPLETE_ALL_4_PHASES.md  APPLICATION_GAP_ANALYSIS_ROADMAP.md  APPLY_SECURITY_SCANNER_FIXES.sh  AUDIT_REMEDIATION_PLAN_OCT30_2025.md  AUDIT_REMEDIATION_PROGRESS_OCT30_2025.md  AUDIT_REMEDIATION_SESSION_COMPLETE_OCT30_2025.md  AUTONOMOUS_AGENT_GAP_ANALYSIS_NOV1_2025.md  AUTONOMOUS_AUDIT_REMEDIATION_COMPLETE_OCT30_2025.md  AUTONOMOUS_ORCHESTRATOR_FIXES_OCT31_2025.md  BACKEND_SESSION_HISTORY_FIXED_OCT23_2025.md  BITRIX24_API_COMPLETE_REFERENCE.md  BITRIX24_API_VERIFICATION_REPORT.md  BITRIX24_AUTONOMOUS_INTEGRATION_GUIDE.md  BITRIX24_DEPLOYMENT_COMPLETE_OCT31_2025.md  BUG_HUNTER_FIX_COMPLETE_OCT31_2025.md  BUSINESS_CARD_PIPELINE_DEPLOYED.md  CADQUERY_MCP_FIXED.md  CAD_DEPLOYMENT_NEXT_STEPS.md  CAD_MCP_DEPLOYMENT_COMPLETE.md  CAD_MCP_PRODUCTION_ANALYSIS.md  CAD_OSS_MCP_RESEARCH_2025.md  CALICO_COMPLETE_FIX_PLAN_OCT22_2025.md  CLAUDE_CODE_SUBPROCESS_RESEARCH_2025.md  COMMAND_CENTER_HTTPS_FIXED_OCT20_2025.md  COMMAND_CENTER_V4_CLAUDECODE_FIX_OCT30_2025.md  COMMAND_INJECTION_FIXES_OCT30_2025.md  COMPETITIVE_ANALYSIS_2025_2026.md  CRM_AUDIT_REPORT_OCT2025.md  CRM_CLAUDECODE_UPGRADE_ROADMAP_2025.md  DATABASE_LOCK_FIX_COMPLETE_NOV1_2025.md  DEFECTDOJO_CELERY_REDIS_ISSUE_RESOLVED.md  DOCS_AUTOMATION_COMPLETE.md  DOCS_AUTOMATION_DESIGN.md  DOCS_AUTOMATION_IMPLEMENTATION_REPORT.md  Dangerfile  (+115 more)
.claude/: CLAUDE.md
.github/: AGENT_GITHUB_ACCESS_GUIDE.md  BRANCH_PROTECTION.md  CODEOWNERS  CODE_QUALITY.md  ISSUE_MANAGEMENT.md  PR_REVIEW_GUIDE.md  RELEASE_MANAGEMENT.md  SECRET_MANAGEMENT.md  branch-protection.yml  dependabot.yml  pull_request_template.md  secret_scanning.yml
autonomous-task-orchestrator/: DEPLOYMENT_SUCCESS_OCT30_2025.md  IMPLEMENTATION_COMPLETE.md  MULTI_AGENT_ARCHITECTURE.md  MULTI_AGENT_DEPLOYMENT.md  agent_coordinator.py  autonomous_orchestrator.py  (+4 more)
insa-iot-platform/: .dockerignore  .env.example  .gitignore  .gitleaksignore  ARCHITECTURE_PLAN.md  ARCHITECTURE_PLAN_EXECUTIVE_SUMMARY.md  BACKUP_SYSTEM_COMPLETE_NOV20_2025.md  BEST_PRACTICES_RESEARCH_2025.md  COMPLETE_WEEK1_SESSION_NOV20_2025.md  CONFIGURATION_SUMMARY.md  CONTINUOUS_AGGREGATES_SUMMARY.md  CONTRIBUTING.md  DOCKER_CONNECTION_ISSUE.md  DOCKER_CONNECTION_WORKAROUND_NOV20_2025.md  Dockerfile  EXPERT_ARCHITECTURE_PLAN.md  EXPERT_ARCHITECTURE_PLAN_PART2.md  EXPERT_ARCHITECTURE_PLAN_PART3.md  EXPERT_ARCHITECTURE_SYNTHESIS.md  FOUNDATION_COMPLETE_NOV20_2025.md  HEALTH_ENDPOINTS_VERIFIED_NOV20_2025.md  IMPLEMENTATION_ROADMAP_12_WEEKS.md  LAZY_INIT_FIX_COMPLETE_NOV20_2025.md  MODULAR_STRUCTURE_SUMMARY.md  MONITORING_SYSTEM_COMPLETE_NOV20_2025.md  Makefile  PLATFORM_AUDIT_REPORT.md  PLATFORM_IDENTITY_VERIFICATION.md  PLATFORM_STRUCTURE.md  PRODUCTION_SOLUTION.md  QUICK_START.md  RATE_LIMITING_IMPLEMENTATION_SUMMARY.md  README.md  README_CONFIGURATION.md  SENTINEL_OG_ANALYSIS.md  SESSION_COMPLETE_TIMESCALEDB_AND_BACKUPS_NOV20_2025.md  SESSION_COMPLETE_TIMESCALEDB_NOV20_2025.md  SESSION_SUMMARY_FOUNDATION_WEEK1_NOV20_2025.md  TECHNICAL_DECISIONS_AND_TRADEOFFS.md  TIMESCALEDB_MIGRATION_COMPLETE_NOV20_2025.md  (+30 more)
insa-iot-platform/.claude/: CLAUDE.md
insa-iot-platform/app/: README.md  __init__.py
insa-iot-platform/app/api/: __init__.py
insa-iot-platform/app/api/middleware/: __init__.py  error_handler.py  monitoring.py  rate_limit_middleware.py
insa-iot-platform/app/api/routes/: __init__.py  analytics.py  auth.py  diagnostics.py  docs.py  health.py  ml.py  rate_limits.py  sse.py  telemetry.py  tenants.py
insa-iot-platform/app/core/: __init__.py  auth.py  config.py  exceptions.py  logging.py  metrics.py  rate_limiter.py
insa-iot-platform/app/db/: __init__.py  connection.py  models.py
insa-iot-platform/app/middleware/: __init__.py  tenant_middleware.py
insa-iot-platform/app/services/: __init__.py  analytics_service.py  diagnostic_service.py  quota_service.py  realtime_publisher.py  telemetry_service.py  tenant_service.py
insa-iot-platform/app/services/ml/: __init__.py  anomaly_detection.py  model_storage.py  performance_optimizer.py  predictive_maintenance.py
insa-iot-platform/app/websocket/: __init__.py  ws_server.py
insa-iot-platform/docs/: API.md  API_DOCUMENTATION_SUMMARY.md  API_EXAMPLES.md  AUTHENTICATION.md  BACKUP_ARCHITECTURE.md  BACKUP_AUTOMATION.md  CONFIGURATION.md  CONTINUOUS_AGGREGATES.md  CONTINUOUS_AGGREGATES_QUICK_START.md  ML_ANALYTICS.md  MONITORING.md  MULTI_TENANCY.md  PERFORMANCE.md  QUICK_START.md  RATE_LIMITING.md  RATE_LIMITING_INTEGRATION.md  REALTIME_STREAMING.md  openapi.yaml  postman_collection.json
insa-iot-platform/examples/: sse_client.html  websocket_client.html  websocket_client.py
insa-iot-platform/grafana/dashboards/: esp_monitoring_dashboard.json
insa-iot-platform/grafana/provisioning/dashboards/: provider.yaml
insa-iot-platform/grafana/provisioning/datasources/: postgres.yaml
insa-iot-platform/migrations/: 001_create_hypertables.sql  002_fix_primary_keys_for_hypertable.sql  003_create_users_table.sql  004_create_continuous_aggregates.sql  005_create_tenants.sql
insa-iot-platform/monitoring/: README.md  alertmanager.yml  docker-compose.yml  grafana_dashboard.json  prometheus.yml  prometheus_rules.yml  start-monitoring.sh
insa-iot-platform/monitoring/grafana_provisioning/dashboards/: dashboard.yml
insa-iot-platform/monitoring/grafana_provisioning/datasources/: prometheus.yml
insa-iot-platform/nginx/: nginx.conf
insa-iot-platform/nginx/sites-enabled/: simple.conf
insa-iot-platform/scripts/: TIMER_QUICK_REFERENCE.md  backup_timescaledb.sh  install_backup_timer.sh  ml_training_scheduler.py  rate_limit_redis_scripts.lua  restore_timescaledb.sh  test_backup_timer.sh  test_rate_limiting_performance.py  timescaledb-backup.service  timescaledb-backup.timer  validate_config.py
insa-iot-platform/static/: index.html
insa-iot-platform/tests/: test_auth.py  test_continuous_aggregates.py  test_ml.py  test_multi_tenancy.py  test_rate_limiting.py  test_realtime.py
(+443 files in other folders)
