# ============================================================================
# Alkhorayef ESP IoT Platform - Python Project Configuration
# ============================================================================
# This file configures Python development tools: black, mypy, pytest, isort
# ============================================================================

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "alkhorayef-esp-iot-platform"
version = "1.0.0"
description = "Intelligent ESP pump diagnostics with AI-powered knowledge graph RAG system"
authors = [
    {name = "Alkhorayef Petroleum Company", email = "support@alkhorayef.com"}
]
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Proprietary"}
keywords = ["iot", "esp", "artificial-lift", "oil-gas", "ai", "rag", "timeseries"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: System :: Monitoring",
]

# ----------------------------------------------------------------------------
# Black Code Formatter Configuration
# ----------------------------------------------------------------------------
[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | build
  | dist
  | migrations
  | __pycache__
)/
'''

# ----------------------------------------------------------------------------
# isort Import Sorter Configuration
# ----------------------------------------------------------------------------
[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_glob = ["*/migrations/*", "*/venv/*", "*/__pycache__/*"]
known_third_party = ["fastapi", "pydantic", "sqlalchemy", "asyncpg", "redis"]
known_first_party = ["app", "api", "models", "services"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]

# ----------------------------------------------------------------------------
# MyPy Static Type Checker Configuration
# ----------------------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_any_generics = false
disallow_subclassing_any = false
disallow_untyped_calls = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_optional = true
strict_equality = true
show_error_codes = true
show_column_numbers = true
pretty = true

# Ignore missing imports for third-party libraries without type stubs
ignore_missing_imports = true

# Exclude specific directories
exclude = [
    "venv/",
    ".venv/",
    "build/",
    "dist/",
    "migrations/",
    "__pycache__/",
    "*.egg-info/",
]

# Per-module options
[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
check_untyped_defs = false

[[tool.mypy.overrides]]
module = [
    "graphiti_core.*",
    "sentence_transformers.*",
    "transformers.*",
    "prophet.*",
]
ignore_missing_imports = true

# ----------------------------------------------------------------------------
# Pytest Testing Framework Configuration
# ----------------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",                          # Show summary of all test outcomes
    "-q",                           # Quiet output
    "--strict-markers",             # Raise error on undefined marks
    "--strict-config",              # Raise error on config issues
    "--cov=.",                      # Coverage for current directory
    "--cov-report=term-missing",    # Show missing lines in terminal
    "--cov-report=html",            # Generate HTML coverage report
    "--cov-report=xml",             # Generate XML coverage report
    "--cov-fail-under=70",          # Fail if coverage below 70%
    "--tb=short",                   # Short traceback format
    "--maxfail=3",                  # Stop after 3 failures
    "--asyncio-mode=auto",          # Auto-detect async tests
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "db: marks tests that require database",
    "redis: marks tests that require Redis",
    "ml: marks tests that require ML models",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
# Async test timeout (seconds)
asyncio_mode = "auto"
timeout = 300

# ----------------------------------------------------------------------------
# Coverage Configuration
# ----------------------------------------------------------------------------
[tool.coverage.run]
source = ["."]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
    "*/migrations/*",
    "*/node_modules/*",
    "setup.py",
]
branch = true
parallel = true

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"

# ----------------------------------------------------------------------------
# Pylint Configuration
# ----------------------------------------------------------------------------
[tool.pylint.main]
py-version = "3.11"
jobs = 0  # Use all CPU cores
suggestion-mode = true
load-plugins = []

[tool.pylint.messages_control]
disable = [
    "C0111",  # missing-docstring
    "C0103",  # invalid-name
    "R0903",  # too-few-public-methods
    "R0913",  # too-many-arguments
    "R0914",  # too-many-locals
    "W0212",  # protected-access
    "W0613",  # unused-argument
]

[tool.pylint.format]
max-line-length = 100
indent-string = "    "

[tool.pylint.design]
max-args = 10
max-attributes = 15
max-bool-expr = 5
max-branches = 15
max-locals = 20
max-parents = 7
max-public-methods = 25
max-returns = 6
max-statements = 60
min-public-methods = 1

[tool.pylint.similarities]
min-similarity-lines = 4
ignore-comments = true
ignore-docstrings = true
ignore-imports = true

# ----------------------------------------------------------------------------
# Bandit Security Linter Configuration
# ----------------------------------------------------------------------------
[tool.bandit]
exclude_dirs = ["tests", "venv", ".venv", "build", "dist"]
tests = ["B201", "B301"]
skips = ["B101", "B601"]

# ----------------------------------------------------------------------------
# Ruff Linter Configuration (Alternative to Flake8)
# ----------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py311"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "migrations",
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]  # Unused imports in __init__.py

[tool.ruff.isort]
known-third-party = ["fastapi", "pydantic", "sqlalchemy"]
